<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_personalized_greeting"
        android:summary="@string/pref_personalized_greeting"
        android:title="@string/pref_title_personalized_greeting" />


    <EditTextPreference
        android:dependency="pref_personalized_greeting"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="pref_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_reset_every_day"
        android:title="@string/pref_reset_every_day" />

</PreferenceScreen>
