<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_notifications_enabled"
        android:title="@string/pref_title_new_message_notifications" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="pref_notifications_enabled"
        android:key="pref_notifications_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="pref_notifications_enabled"
        android:key="pref_notifications_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
